# cmake_test

./: .gitignore  CMakeLists.txt  dec.sh  make.sh  run.sh  version.h.in
configure/: osqp_configure.h.in
include/: CMakeLists.txt  add.h  osqp_configure.h  subtraction.h
src/: CMakeLists.txt  add.cpp  cmake.cpp  subtraction.cpp
